--- a/project.html
+++ b/project.html
@@ -2,3 +2,7 @@
   <h1>project</h1>
 </center>
 <hr>
+
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum nostrum minus veniam nulla in officiis consectetur.
+</p>
