addede phone number

--- a/project.html
+++ b/project.html
@@ -6,3 +6,4 @@
 <p>
   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum nostrum minus veniam nulla in officiis consectetur.
 </p>
+<p>Contact phone number</p>
